adding page, alias and group example a.js calls

--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
       analytics.track('destination submitted', user, function() {
           window.location.href = "";
       });
+      analytics.page('Home', user, {
+        url: "/" 
+      });
+      analytics.alias('507f191e81');
+      analytics.group("0e8c78ea9d97a7b8185e8632", {
+            name: "Initech", 
+            industry: "Technology",
+            employees: 329, 
+            plan: "enterprise", 
+            "total billed": 830
+            });
+
+
+
     }
 </script>
 </body> 
