adding GA tag to site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
         analytics.load("VuOZbPNXuR76IXTQeYaU6twg3qpSNAw9");
         analytics.page();
         }}();
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+async src="https://www.googletagmanager.com/gtag/js?id=UA-147742773-1">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-147742773-1');
+
       </script>
 
 </head> 
