adding target container div

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
     <br><br>
     <input name="submit" type="submit" value="submit"/>
 </form> 
+
+<div id="target-container"></div>
+
+
 <script type="text/javascript">
     function identify(e){
       e.preventDefault();
