adding updated script tag for consent manager

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
       </script>
 
+<script src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js" defer></script>
+
 </head> 
 <body> 
 <h1>What is your favorite place to travel?</h1> 
@@ -107,8 +109,6 @@
             });
     }
 
-src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js"
-  defer
 
 </script>
 </body> 
