--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       </script>
 
-<script src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js" defer></script>
+<script src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js" ></script>
 
 </head> 
 <body> 
