--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     return {
       container: '#target-container',
-      writeKey: '<your-segment-write-key>',
+      writeKey: 'VuOZbPNXuR76IXTQeYaU6twg3qpSNAw9',
       shouldRequireConsent: inEU,
       bannerContent: bannerContent,
       bannerSubContent: bannerSubContent,
