updating script src

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div id="target-container"></div>
 
-<script>
+<script src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js" >
 
 //Adding segment consent manger stand alone script https://github.com/segmentio/consent-manager#standalone-script
 
@@ -76,7 +76,7 @@ window.consentManagerConfig = function(exports) {
 
 </script>
 
-<script src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js" ></script>
+<!-- <script src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js" ></script> -->
 
 <script type="text/javascript">
     function identify(e){
