--- a/index.html
+++ b/index.html
@@ -115,5 +115,14 @@ window.consentManagerConfig = function(exports) {
 
 
 </script>
+<style>
+    #target-container {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
+</style>
 </body> 
 </html>
