--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         container: '#target-container',
         writeKey: 'VuOZbPNXuR76IXTQeYaU6twg3qpSNAw9',
         bannerContent:
-          'We use cookies (and other similar technologies) to collect data to improve your experience on our site. Aimee is funny,
+          'We use cookies (and other similar technologies) to collect data to improve your experience on our site. Aimee is funny',
         bannerSubContent: 'You can change your preferences at any time.',
         preferencesDialogTitle: 'Website Data Collection Preferences',
         preferencesDialogContent:
