removing js type from script tag

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <input name="submit" type="submit" value="submit"/>
 </form> 
 
-<script type="application/javascript">
+<script>
   window.consentManagerConfig = function(exports) {
 
 let customCategories = {
