Adding addSourceMiddleware to analytic methods

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ let customCategories = {
                 'page',
                 'once',
                 'off',
-                'on'
+                'on',
+                'addSourceMiddleware'
               ]
               analytics.factory = function(t) {
                 return function() {
