--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ let customCategories = {
                 'once',
                 'off',
                 'on',
-                'addSourceMiddleware'
+                'addSourceMiddleware,
+                'addDestinationMiddleware'
               ]
               analytics.factory = function(t) {
                 return function() {
