--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@ let customCategories = {
 }
   </script>
 
-<script src="https://unpkg.com/@segment/consent-manager@5.0.0/standalone/consent-manager.js" ></script>
+<script
+  src="https://unpkg.com/@segment/consent-manager@5.0.0/standalone/consent-manager.js"
+  defer
+></script> 
 
 <script>
  
