removing commented out consent manager code

--- a/index.html
+++ b/index.html
@@ -1,24 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-    <title>Home Questionnaire</title> <span id="selection-marker-1" class="redactor-selection-marker"></span>
-
-   
-   
-    <!-- <script src="https://unpkg.com/@segment/consent-manager@4.0.0/standalone/consent-manager.js" 
-    data-container="#target-container" 
-    data-writeKey="VuOZbPNXuR76IXTQeYaU6twg3qpSNAw9"
-    data-bannerContent="We use cookies..."
-    data-preferencesDialogTitle="Website Data Collection Preferences"
-    data-preferencesDialogContent="We use data to collected by cookies"
-    data-cancelDialogTitle="Are you sure you want to cancel?"
-    data-cancelDialogContent="Your preferences have not been saved">
-         !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.1.0";
-// analytics.load("VuOZbPNXuR76IXTQeYaU6twg3qpSNAw9");
-  analytics.page();
-  }}();
-
-      </script> -->
+    <title>Home Questionnaire</title> <span id="selection-marker-1" class="redactor-selection-marker"></span
 
 </head> 
 <div id="target-container"></div>
