--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body> 
 <h1>What is your favorite place to travel?</h1> 
-<p>I am building a directory of the sweetest travel destinations.</p>  
+<p>I am building a directory of travel destinations.</p>  
 <form name="travel" onsubmit="identify(event)">
      What is your favorite travel destination?
     <input name="destination" required="" size="81" type="text"/> 
@@ -99,7 +99,6 @@ let customCategories = {
             });
     }
 </script>
-
 <div id="target-container"></div>
 </body> 
 </html>
