--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head> 
 
 <body> 
-<h1>What is your favorite place to travel?</h1> 
+<h1>What is your favorite place tovvtravel?</h1> 
 <p>I am building a directory of travel destinations.</p>  
 <form name="travel" onsubmit="identify(event)">
      What is your favorite travel destination?
