--- a/index.html
+++ b/index.html
@@ -102,5 +102,15 @@ let customCategories = {
     }
 </script>
 
+<style>
+  #target-container {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
+</style>
+
 </body> 
 </html>
